app/assets/stylesheets/pages/assessments.sass
#assessments-filter
  margin-left: -1em
.assessments
  .assessment
    height: 5em
    margin-top: 1em
    margin-bottom: 1px
    border-bottom: 1px solid #dcdbd4

    .assessment-stat
      *
        font-size: 1.0em
      .category
        font-weight: 300
      .stat
        font-weight: bold
    .name
      margin-top: 0
    .overview
      height: 100%
      padding: 0
      text-align: center
      text-transform: uppercase
      *
        color: #fff
      .type
        font-size: 1.1em
        font-family: $heading-font-family
      .status
        padding-top: .5em
        *
          font-size: 1.6em
    .links
      padding: 0
      *
        padding: 0
      .link
        border-bottom: 1px solid #fff
        background-color: #4a5e67
        padding: .1em
        &.active
          cursor: hand
          cursor: pointer
        &.disabled
          background-color: #b1bbbf
      .fa, a, .title
        color: #fff
      a
        width: 100%
        font-weight: 300



  .details
    height: 100%
    background-color: #f7f9fa
    &.active
      cursor: hand
      cursor: pointer
  .assessment-footer
    height: 2.3em
    line-height: 2em
    background-color: #ebebe8
    border-bottom: 1px solid #dcdbd4
    .district-name
      text-align: right
    .avatar
      height: 100%

